# Restauracja

./: .gitignore  CMakeLists.txt  DOKUMENTACJA.md  INSTRUKCJA.md  README.md  main.cpp  menu.txt
